--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 sqlalchemy
-Flask==2.3.3
-Flask-SQLAlchemy==3.0.5
-Flask-Login==0.6.3
-gunicorn==22.0.0
-psycopg==3.2.3
-Werkzeug==2.3.7
-python-dotenv==1.0.1
+Flask
+Flask-SQLAlchemy
+Flask-Login
+gunicorn
+psycopg2-binary
+Werkzeug
+python-dotenv
